@@ -13,6 +13,55 @@
 #import <OCHamcrest/HCMatcherAssert.h>
 #import <OCHamcrest/HCIsEqual.h>
 
+@interface QuietTestRun : SenTestCaseRun
+{
+    // Can't use original attributes because they're declared @private.
+    unsigned int myFailureCount;
+    unsigned int myUnexpectedExceptionCount;
+}
+@end
+
+@implementation QuietTestRun
+
+- (void) addException:(NSException *) anException
+{	
+    if ([[anException name] isEqualToString:SenTestFailureException])
+		++myFailureCount;
+	else
+		++myUnexpectedExceptionCount;
+}
+
+- (unsigned int) failureCount
+{
+    return myFailureCount;
+}
+
+- (unsigned int) unexpectedExceptionCount
+{
+    return myUnexpectedExceptionCount;
+}
+
+@end
+
+
+@interface QuietTest : SenTestCase
+@end
+
+@implementation QuietTest
+
+- (Class) testRunClass
+{
+    return [QuietTestRun class];
+}
+
+- (void) twoFailingAssertions
+{
+    assertThat(@"1", equalTo(@"2"));
+    assertThat(@"3", equalTo(@"4"));
+}
+
+@end
+
 
 @interface MatcherAssertTest : SenTestCase
 @end
@@ -23,11 +72,11 @@
 {
     NSString* expected = @"expected";
     NSString* actual = @"actual";
-    
     NSString* expectedMessage = @"Expected \"expected\", got \"actual\"";
-        
+    
     @try
     {
+        [self raiseAfterFailure];
         assertThat(actual, equalTo(expected));
     }
     @catch (NSException* exception)
@@ -39,5 +88,28 @@
     STFail(@"should have failed");
 }
 
+
+- (void) testAssertion_recordingAllErrors
+{
+    QuietTest* testCase = [QuietTest testCaseWithSelector:@selector(twoFailingAssertions)];
+
+    [testCase continueAfterFailure];    // Default behavior of SetTestCase
+    QuietTestRun* testRun = (QuietTestRun*)[testCase run];
+
+    STAssertEquals([testRun failureCount], 2U, nil);
+    STAssertEquals([testRun unexpectedExceptionCount], 0U, nil);
+}
+
+
+- (void) testAssertion_stoppingAtFirstError
+{
+    QuietTest* testCase = [QuietTest testCaseWithSelector:@selector(twoFailingAssertions)];
+
+    [testCase raiseAfterFailure];
+    QuietTestRun* testRun = (QuietTestRun*)[testCase run];
+
+    STAssertEquals([testRun failureCount], 1U, nil);
+    STAssertEquals([testRun unexpectedExceptionCount], 0U, nil);
+}
 
 @end
